# Restaurant-Management-System

./: .gitignore  README.md
src/: CMakeLists.txt  deskwindow.cpp  deskwindow.h  deskwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  orderadd.cpp  orderadd.h  orderadd.ui  orderaddtaste.cpp  orderaddtaste.h  orderdata.cpp  orderdata.h  orderstatusedit.cpp  orderstatusedit.h  orderstatusedit.ui  orderwindow.cpp  orderwindow.h  orderwindow.ui  stockcreate.cpp  stockcreate.h  stockcreate.ui  stockdata.cpp  stockdata.h  stockedit.cpp  stockedit.ui  stockwindow.cpp  stockwindow.h  stockwindow.ui  vipcreate.cpp  vipcreate.h  vipcreate.ui  vipdata.cpp  vipdata.h  vipedit.cpp  vipedit.h  vipedit.ui  viptypecreate.cpp  viptypecreate.h  (+4 more)
src/RestaurantManagementSystem/: CMakeLists.txt  dataTemplate.h  deskwindow.cpp  deskwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  orderadd.cpp  orderadd.h  orderaddtaste.ui  orderdata.cpp  orderdata.h  orderwindow.cpp  orderwindow.h  orderwindow.ui  stockcreate.cpp  stockcreate.ui  stockdata.cpp  stockdata.h  stockedit.cpp  stockedit.h  stockedit.ui  stockwindow.cpp  stockwindow.h  stockwindow.ui
